--- a/package.json
+++ b/package.json
@@ -62,7 +62,9 @@
     "pg": "^6.1.0",
     "pretty-error": "^2.0.2",
     "react": "^15.3.2",
+    "react-d3-basic": "^1.6.11",
     "react-dom": "^15.3.2",
+    "react-easy-chart": "^0.1.13",
     "react-redux": "^4.4.5",
     "react-router": "^3.0.0",
     "redux": "^3.6.0",
