--- a/package.json
+++ b/package.json
@@ -61,10 +61,8 @@
     "passport-local": "^1.0.0",
     "pg": "^6.1.0",
     "pretty-error": "^2.0.2",
-    "react": "^15.3.2",
-    "react-d3-basic": "^1.6.11",
+    "react": "^15.6.1",
     "react-dom": "^15.3.2",
-    "react-easy-chart": "^0.1.13",
     "react-redux": "^4.4.5",
     "react-router": "^3.0.0",
     "redux": "^3.6.0",
@@ -73,7 +71,8 @@
     "redux-thunk": "^2.1.0",
     "sequelize": "^3.24.6",
     "sinon": "^1.17.6",
-    "sinon-chai": "^2.8.0"
+    "sinon-chai": "^2.8.0",
+    "victory": "^0.21.0"
   },
   "devDependencies": {
     "babel": "^6.5.2",
